--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -13,6 +13,10 @@ cite {
   margin-top: 10px;
 }
 
+section#external-links {
+  width: 200px;
+}
+
 #external-links ul {
   list-style-type: none;
   padding-left: 0px;
