--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -1,7 +1,4 @@
-body {
-  width: 960px;
-}
-
+/* Default Styles */
 blockquote {
   border-left: 5px solid blue;
   padding: 15px;
@@ -35,10 +32,25 @@ figcaption {
   text-align: right;
 }
 
+/*-------------------*/
+/* CUSTOM STYLES */
+/*-------------------*/
+
+body {
+  width: 960px;
+}
+
+/* Make External Links a Sidebar */
 main {
   width: 756px;
+  display: inline-block;
 }
 
 section#external-links {
   width: 200px;
+  display: inline-block;
+  vertical-align: top;
 }
+
+
+
