add gray background to header and blurred footer

--- a/css/gps/gps2-1.css
+++ b/css/gps/gps2-1.css
@@ -4,3 +4,12 @@ section {
   vertical-align: top;
 }
 
+header {
+  background-color: gray;
+  border-radius: 25%;
+}
+
+footer {
+  filter: grayscale(0.5) blur(10px);
+}
+
