fade articles in on page load and add color swatch that changes page theme

--- a/web_dev/jquery/style.css
+++ b/web_dev/jquery/style.css
@@ -3,10 +3,11 @@ div.block {
   width: 200px;
   margin: 15px;
   display: inline-block;
+  cursor: pointer;
 }
 
 div#first-block {
-  background-color: black;
+  background-color: #91745C;
 }
 
 div#second-block {
@@ -15,4 +16,16 @@ div#second-block {
 
 div#third-block {
   background-color: yellow;
+}
+
+h3#swatch-control {
+  cursor: pointer;
+}
+
+div#swatches {
+  display: none;
+}
+
+section#articles {
+  display: none;
 }
